--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "appbase": {
     "appname": "surge-pricing",
-    "username": "nSTuWqtf4",
-    "password": "cfa0ff2c-7411-4498-b7fa-53f434d3d64e",
+    "username": "leZlgpKRE",
+    "password": "6645060f-c192-44e8-83a0-770d16e348d9",
     "type": "coordinates"
   }
 }
