--- a/package.json
+++ b/package.json
@@ -15,29 +15,16 @@
   "author": "Aaditya Thakkar",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.3.0",
-    "heatmap.js": "^2.0.2",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2"
-  },
-  "devDependencies": {
-    "babelify": "^7.3.0",
+    "appbase-js": "^0.10.7",
     "browserify": "^13.0.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^2.0.1",
-    "gulp-react": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "gulp-connect": "*",
-    "gulp-livereload": "*",
     "connect": "^2.14.4",
-    "connect-livereload": "^0.4.0"
-  }
+    "connect-livereload": "^0.5.4",
+    "gulp": "^3.9.1",
+    "react": "^15.1.0",
+    "react-addons-pure-render-mixin": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {}
 }
