Adding buildRequestObject in helper function

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "appbase": {
     "appname": "surge-pricing",
-    "username": "leZlgpKRE",
-    "password": "6645060f-c192-44e8-83a0-770d16e348d9",
+    "username": "wJr2Xmx3K",
+    "password": "865e47c4-81b4-421b-8dba-b59678042c0a",
     "type": "coordinates"
   }
 }
