ttl added and async input generator

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "appbase": {
-    "appname": "surge-pricing",
-    "username": "wJr2Xmx3K",
-    "password": "865e47c4-81b4-421b-8dba-b59678042c0a",
+    "appname": "surge_price",
+    "username": "mKLEb1QEJ",
+    "password": "16b4e1ff-6037-4a8e-9ef2-2b2557e23e6a",
     "type": "coordinates"
   }
 }
