added static layer of demaders and suppliers markers

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "appbase": {
     "appname": "surge_price",
-    "username": "mKLEb1QEJ",
-    "password": "16b4e1ff-6037-4a8e-9ef2-2b2557e23e6a",
+    "username": "rMQG97koD",
+    "password": "bc7a4d37-f44f-4f03-a07c-2d51f88c62dd",
     "type": "coordinates"
   }
 }
