changes in input method

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "appbase": {
     "appname": "surge_price",
-    "username": "rMQG97koD",
-    "password": "bc7a4d37-f44f-4f03-a07c-2d51f88c62dd",
+    "username": "s7I79Hzeb",
+    "password": "79b87fc5-9629-4842-8bc1-a5108474e178",
     "type": "coordinates"
   }
 }
