changed the app and credentials

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "appbase": {
-    "appname": "surge_price",
-    "username": "s7I79Hzeb",
-    "password": "79b87fc5-9629-4842-8bc1-a5108474e178",
+    "appname": "map_demo",
+    "username": "aT29UsiAp",
+    "password": "e0d26007-d818-4559-8244-c3c2fbad45ad",
     "type": "coordinates"
   }
 }
